# EdelweissMPM

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: black.yml  run_tests.yml
doc/source/: conf.py  index.rst
edelweissmpm/config/: cellelementlibrary.py  celllibrary.py  mplibrary.py
edelweissmpm/constraints/: particlelagrangianequalvalue.py  particlelagrangianweakdirichlet.py  particlelagrangianweakdirichtlet.py  particlepenaltyequalvalue.py  particlepenaltyweakdirichtlet.py  penaltyconstrainmp2node.py  penaltyequalvalue.py  penaltyweakdirichlet.py
edelweissmpm/fieldoutput/: fieldoutput.py  mpresultcollector.pyx
edelweissmpm/fields/: nodefield.py
edelweissmpm/generators/: boxbsplinegridgenerator.py  boxgridgenerator.py  boxmpgenerator.py  circlempgenerator.py  cooksmembranekernelfunctiongridgenerator.py  cooksmembranequadparticlegridgenerator.py  cylindermpgenerator.py  findclosestmp.py  rectangularbsplinegridgenerator.py  rectangularcellelementgridgenerator.py  rectangularelementcellgridgenerator.py  rectangulargridgenerator.py  rectangularkernelfunctiongridgenerator.py  rectangularmpgenerator.py  rectangularparticlegenerator.py  rectangularparticlegridgenerator.py  rectangularquadparticlegridgenerator.py
edelweissmpm/meshfree/: particlekerneldomain.py  vci.py
edelweissmpm/models/: mpmmodel.py
edelweissmpm/mpmmanagers/: simplempmmanager.py  smartmpmmanager.py  utils.pyx
edelweissmpm/numerics/: dofmanager.py
edelweissmpm/outputmanagers/: ensight.py
edelweissmpm/particlemanagers/: kdbinorganizedparticlemanager.py
(+233 files in other folders)
